<resources>
    <string name="app_name">BusBuzzLK</string>
    <!-- Strings related to login -->
    <string name="sign_in_btn_text">SIGN IN</string>
    <string name="sign_up_btn_text">SIGN UP</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="continue_text">Continue</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="confirm_password_txt">Confirm Password</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="username_txt">Username</string>
    <string name="title_activity_home_navigation">BusBuzz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Yes</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>
